# regular-dicers-backend

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: database.yml  publish.yml  rust.yml
.kubernetes/: manifest.yaml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2019-11-17-134224_create_users/: up.sql
migrations/2019-11-17-134612_create_chats/: up.sql
migrations/2019-11-17-151548_create_chat_users/: down.sql  up.sql
migrations/2019-11-17-155009_create_messages/: up.sql
migrations/2019-11-17-155746_create_events/: up.sql
migrations/2019-11-29-114504_create_event_users/: down.sql  up.sql
migrations/2020-01-15-164621_create_user_rolls/: down.sql  up.sql
migrations/2020-01-15-221932_create_cocktails/: down.sql  up.sql
migrations/2020-01-15-221938_insert_cocktails/: down.sql  up.sql
migrations/2020-01-20-183132_create_ingredients/: up.sql
migrations/2020-01-20-183632_insert_ingredients/: down.sql  up.sql
migrations/2020-01-20-184831_create_cocktail_ingredients/: down.sql  up.sql
migrations/2020-01-20-191317_insert_cocktail_ingredients/: down.sql  up.sql
migrations/2020-01-23-144943_update_cocktails_add_category_column/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs
src/database/: mock.rs  mod.rs  models.rs  schema.rs
src/graphql/: schema.rs
